add nav bar, word list change version number

--- a/demo_extension/popup.html
+++ b/demo_extension/popup.html
@@ -5,11 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <h1>SHIT</h1>
+    <div id="app">
+        <div class="topnav">
+            <a class="active" id="inbox-nav" href="javascript:;">Inbox</a>
+            <a id="unknown-nav" href="javascript:;">Unknown</a>
+            <a id="known-nav" href="javascript:;">Known</a>
+        </div>
+        <div class="wordlist">
+            <a href="javascript:;" class="list-item">
+                <div class="word">SHIT</div>
+                <div class="buttons">
+                    <div class="known-button button"></div>
+                    <div class="unknown-button button"></div>
+                </div>
+            </a>
+            <a href="javascript:;" class="list-item">
+                <div class="word">SHIT</div>
+                <div class="buttons">
+                    <div class="known-button button"></div>
+                    <div class="unknown-button button"></div>
+                </div>
+            </a>
+            <a href="javascript:;" class="list-item">
+                <div class="word">SHIT</div>
+                <div class="buttons">
+                    <div class="known-button button"></div>
+                    <div class="unknown-button button"></div>
+                </div>
+            </a>
+            <a href="javascript:;" class="list-item">
+                <div class="word">SHIT</div>
+                <div class="buttons">
+                    <div class="known-button button"></div>
+                    <div class="unknown-button button"></div>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
+
+<script src="popup.js"> </script>
 
 </html>
