--- a/demo_extension/popup.html
+++ b/demo_extension/popup.html
@@ -15,38 +15,21 @@
             <a id="unknown-nav" href="javascript:;">Unknown</a>
             <a id="known-nav" href="javascript:;">Known</a>
         </div>
-        <div class="wordlist">
-            <a href="javascript:;" class="list-item">
-                <div class="word">SHIT</div>
-                <div class="buttons">
-                    <div class="known-button button"></div>
-                    <div class="unknown-button button"></div>
-                </div>
-            </a>
-            <a href="javascript:;" class="list-item">
-                <div class="word">SHIT</div>
-                <div class="buttons">
-                    <div class="known-button button"></div>
-                    <div class="unknown-button button"></div>
-                </div>
-            </a>
-            <a href="javascript:;" class="list-item">
-                <div class="word">SHIT</div>
-                <div class="buttons">
-                    <div class="known-button button"></div>
-                    <div class="unknown-button button"></div>
-                </div>
-            </a>
-            <a href="javascript:;" class="list-item">
-                <div class="word">SHIT</div>
-                <div class="buttons">
-                    <div class="known-button button"></div>
-                    <div class="unknown-button button"></div>
-                </div>
-            </a>
-        </div>
+        <div id="wordlist" class="wordlist"></div>
     </div>
 </body>
+
+<div id="templates">
+    <div id="wordlist-item">
+        <a href="javascript:;" class="list-item">
+            <div class="word">SHIT</div>
+            <div class="buttons">
+                <div class="known-button button"></div>
+                <div class="unknown-button button"></div>
+            </div>
+        </a>
+    </div>
+</div>
 
 <script src="popup.js"> </script>
 
